DividendDataSaveJobConfiguration update